--- a/index.html
+++ b/index.html
@@ -35,5 +35,10 @@
         document.getElementById("borda").style.border = "3px solid black";
     </script>
 </body>
-
+<p class="fs-1">.fs-1 text</p>
+<p class="fs-2">.fs-2 text</p>
+<p class="fs-3">.fs-3 text</p>
+<p class="fs-4">.fs-4 text</p>
+<p class="fs-5">.fs-5 text</p>
+<p class="fs-6">.fs-6 text</p>
 </html>
